
Use a readonly static field instead of a constant if we want to allow this value to be set once at runtime (e.g., for different Sudoku variants):
public class Rules
{
    public static readonly int EmptyCellValue = 0;
    // ... other members ...
}

Copy

Apply

Consider using an enum for special cell values:
public enum CellValue
{
    Empty = 0,
    // ... potentially other special values ...
}

public class Rules
{
    public static readonly CellValue EmptyCellValue = CellValue.Empty;
    // ... other members ...
}

Copy

Apply

This approach improves type safety and readability.

Add XML documentation to clearly explain the purpose and usage of EmptyCellValue:
/// <summary>
/// Represents an empty cell in the Sudoku grid.
/// </summary>
public static readonly CellValue EmptyCellValue = CellValue.Empty;

Copy

Apply

If different Sudoku variants might use different empty cell values, we could make it an instance field of Rules, initialized in the constructor:
public class Rules
{
    public CellValue EmptyCellValue { get; }

    public Rules(CellValue emptyCellValue, /* other parameters */)
    {
        EmptyCellValue = emptyCellValue;
        // ... initialize other fields ...
    }
}

Copy

Apply

This approach maintains the semantic connection to Rules while allowing flexibility for different game variants.

These improvements enhance readability, maintainability, and provide a clear, efficient way to represent and use the empty cell value throughout the Sudoku solver implementation.

Refactor ValidValues class for improved efficiency and security

- Implement IEquatable<ValidValues> for efficient comparisons
- Use RNGCryptoServiceProvider for cryptographically secure randomization
- Remove redundant Count property
- Add XML documentation for better code clarity
- Seal class to prevent unintended inheritance
- Simplify Equals and GetHashCode methods
- Incorporate validation logic into constructor
- Rename AsReadOnly method to Get for clarity
  